Trim kernel config for USB boot and shell
Updated kernel configuration for USB shell use case, removing unnecessary features and optimizing for size.

--- a/minimal_kernel.config
+++ b/minimal_kernel.config
@@ -1,101 +1,108 @@
-# Minimal Linux Kernel Config
-# Target: HP 85DD, AMD Ryzen 5 3500U (Zen+, family 17h), Vega 8 iGPU
-# Display: simpledrm/efifb (no amdgpu), NVMe boot, USB3 boot
-# Goal: ~1.3MB bzImage with XZ compression
-# Kernel version: 6.6 LTS recommended
-#
-# Build with:
-#   make KCONFIG_CONFIG=minimal_kernel.config -j$(nproc) bzImage
-# Output: arch/x86/boot/bzImage
+# Minimal Linux Kernel Config - TRIMMED FOR USB SHELL
+# Target: HP 85DD, AMD Ryzen 5 3500U (Zen+, family 17h)
+# Use case: Boot from USB, shell with text in/out, read/write USB storage
+# Display: simpledrm/efifb only
+# No networking, no NVMe, no modules, no swap, no sound
+# Kernel: 6.6 LTS
+# Expected size: ~1.0-1.4MB bzImage
 
-# ===== BASIC KERNEL IDENTITY =====
+# ===== CORE =====
 CONFIG_64BIT=y
 CONFIG_X86_64=y
-CONFIG_OUTPUT_FORMAT="elf64-x86-64"
+CONFIG_SMP=y
+CONFIG_NR_CPUS=8
 
-# ===== SIZE OPTIMIZATION =====
+# ===== SIZE OPTIMIZATIONS =====
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_KERNEL_XZ=y
-# Disable debug entirely
+CONFIG_EMBEDDED=y
+# CONFIG_MODULES is not set
+# CONFIG_SWAP is not set
+
+# ===== STRIP DEBUG COMPLETELY =====
 # CONFIG_DEBUG_KERNEL is not set
 # CONFIG_DEBUG_INFO is not set
 # CONFIG_DEBUG_INFO_DWARF_TOOLCHAIN_DEFAULT is not set
 # CONFIG_KALLSYMS is not set
-# CONFIG_PRINTK_TIME is not set
 # CONFIG_DYNAMIC_DEBUG is not set
 # CONFIG_SYMBOLIC_ERRNAME is not set
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_DEBUG_MEMORY_INIT is not set
+# CONFIG_FTRACE is not set
+# CONFIG_KPROBES is not set
+# CONFIG_PERF_EVENTS is not set
+# CONFIG_PROFILING is not set
+# CONFIG_BUG is not set
+# CONFIG_ELF_CORE is not set
+# CONFIG_COREDUMP is not set
 
-# ===== CPU =====
-CONFIG_SMP=y
-CONFIG_NR_CPUS=8
-CONFIG_X86_LOCAL_APIC=y
-CONFIG_X86_IO_APIC=y
+# ===== CPU - AMD ONLY =====
+CONFIG_MZEN=y
 CONFIG_MICROCODE=y
 CONFIG_MICROCODE_AMD=y
 # CONFIG_MICROCODE_INTEL is not set
+CONFIG_X86_LOCAL_APIC=y
+CONFIG_X86_IO_APIC=y
+# CONFIG_X86_MCE is not set
+
+# ===== ACPI (required for Ryzen stability) =====
+CONFIG_ACPI=y
+CONFIG_ACPI_SLEEP=y
+CONFIG_ACPI_PROCESSOR=y
+CONFIG_ACPI_THERMAL=y
+CONFIG_ACPI_BUTTON=y
+CONFIG_CPU_IDLE=y
+CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 CONFIG_X86_ACPI_CPUFREQ=y
-CONFIG_X86_AMD_PSTATE=y
-# Zen+ specific
-CONFIG_MZEN=y
-# CONFIG_GENERIC_CPU is not set
-
-# ===== MEMORY =====
-CONFIG_HIGHMEM64G=y
-CONFIG_SPARSEMEM=y
-CONFIG_SPARSEMEM_VMEMMAP=y
-CONFIG_TRANSPARENT_HUGEPAGE=y
-CONFIG_NUMA=y
-
-# ===== ACPI & POWER (required for Ryzen to init properly) =====
-CONFIG_ACPI=y
-CONFIG_ACPI_SLEEP=y
-CONFIG_ACPI_AC=y
-CONFIG_ACPI_BATTERY=y
-CONFIG_ACPI_BUTTON=y
-CONFIG_ACPI_FAN=y
-CONFIG_ACPI_THERMAL=y
-CONFIG_ACPI_PROCESSOR=y
-CONFIG_CPU_IDLE=y
-CONFIG_CPU_IDLE_GOV_MENU=y
-# AMD SMU needed for Vega iGPU power init even without amdgpu
 CONFIG_X86_AMD_PLATFORM_DEVICE=y
+# CONFIG_ACPI_AC is not set
+# CONFIG_ACPI_BATTERY is not set
+# CONFIG_ACPI_FAN is not set
+# CONFIG_ACPI_VIDEO is not set
+# CONFIG_ACPI_DOCK is not set
 
-# ===== PCI & PCIe (required for NVMe) =====
+# ===== PCI (needed for USB controller on AMD chipset) =====
 CONFIG_PCI=y
 CONFIG_PCIEPORTBUS=y
-CONFIG_PCIEASPM=y
 CONFIG_PCI_MSI=y
 CONFIG_PCI_MMCONFIG=y
 CONFIG_PCI_DIRECT=y
+# CONFIG_PCIEASPM is not set
 
-# ===== EFI (HP board boots UEFI) =====
+# ===== EFI (HP board is UEFI) =====
 CONFIG_EFI=y
 CONFIG_EFI_STUB=y
-CONFIG_EFI_MIXED=n
-CONFIG_FB_EFI=y
 CONFIG_EFIVAR_FS=y
+# CONFIG_EFI_MIXED is not set
+# CONFIG_EFI_CAPSULE_LOADER is not set
 
-# ===== BLOCK LAYER =====
+# ===== MEMORY =====
+CONFIG_SPARSEMEM=y
+CONFIG_SPARSEMEM_VMEMMAP=y
+# CONFIG_TRANSPARENT_HUGEPAGE is not set
+# CONFIG_NUMA is not set
+# CONFIG_COMPACTION is not set
+# CONFIG_MIGRATION is not set
+
+# ===== BLOCK =====
 CONFIG_BLOCK=y
-CONFIG_BLK_DEV_NVME=y
-CONFIG_NVME_CORE=y
-# CONFIG_NVME_MULTIPATH is not set
-# CONFIG_NVME_VERBOSE_ERRORS is not set
+# NVMe removed - not needed, booting from USB
+# CONFIG_BLK_DEV_NVME is not set
 
-# ===== USB (xHCI for USB3 boot) =====
+# ===== USB (xHCI only - USB3, covers USB2 too) =====
 CONFIG_USB_SUPPORT=y
 CONFIG_USB=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_STORAGE=y
-CONFIG_USB_UAS=y
+# CONFIG_USB_UAS is not set
 # CONFIG_USB_EHCI_HCD is not set
 # CONFIG_USB_OHCI_HCD is not set
+# CONFIG_USB_UHCI_HCD is not set
+# CONFIG_USB_PRINTER is not set
 
-# ===== DISPLAY: simpledrm + efifb (NO amdgpu) =====
+# ===== DISPLAY: efifb + simpledrm only =====
 CONFIG_DRM=y
 CONFIG_DRM_SIMPLEDRM=y
 CONFIG_FB=y
@@ -107,14 +114,13 @@ CONFIG_VT=y
 CONFIG_VT_CONSOLE=y
 CONFIG_DUMMY_CONSOLE=y
 CONFIG_FONT_8x16=y
-# Explicitly disable heavy GPU drivers
+# No GPU drivers
 # CONFIG_DRM_AMDGPU is not set
 # CONFIG_DRM_RADEON is not set
 # CONFIG_DRM_NOUVEAU is not set
 # CONFIG_DRM_I915 is not set
-# CONFIG_DRM_AST is not set
 
-# ===== INPUT (keyboard so you can use the console) =====
+# ===== INPUT (keyboard only) =====
 CONFIG_INPUT=y
 CONFIG_INPUT_KEYBOARD=y
 CONFIG_KEYBOARD_ATKBD=y
@@ -124,9 +130,12 @@ CONFIG_SERIO_LIBPS2=y
 CONFIG_HID=y
 CONFIG_USB_HID=y
 CONFIG_HID_GENERIC=y
+# CONFIG_INPUT_MOUSE is not set
+# CONFIG_INPUT_TOUCHSCREEN is not set
+# CONFIG_INPUT_JOYSTICK is not set
+# CONFIG_INPUT_MISC is not set
 
 # ===== FILESYSTEMS =====
-# Include what you need for your root fs
 CONFIG_EXT4_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_FS=y
@@ -138,6 +147,14 @@ CONFIG_PROC_FS=y
 CONFIG_SYSFS=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
+# CONFIG_BTRFS_FS is not set
+# CONFIG_XFS_FS is not set
+# CONFIG_FUSE_FS is not set
+# CONFIG_NETWORK_FILESYSTEMS is not set
+# CONFIG_QUOTA is not set
+# CONFIG_AUTOFS_FS is not set
+# CONFIG_INOTIFY_USER is not set
+# CONFIG_FANOTIFY is not set
 
 # ===== INITRAMFS =====
 CONFIG_BLK_DEV_INITRD=y
@@ -148,12 +165,9 @@ CONFIG_RD_GZIP=y
 # ===== EXECUTABLE FORMATS =====
 CONFIG_BINFMT_ELF=y
 CONFIG_BINFMT_SCRIPT=y
+# CONFIG_BINFMT_MISC is not set
 
-# ===== PRINTK (keep minimal but don't disable entirely - useful for debug) =====
-CONFIG_PRINTK=y
-CONFIG_LOG_BUF_SHIFT=12
-
-# ===== MISC REQUIRED =====
+# ===== KERNEL FEATURES =====
 CONFIG_MULTIUSER=y
 CONFIG_SYSCTL=y
 CONFIG_FUTEX=y
@@ -164,32 +178,47 @@ CONFIG_EVENTFD=y
 CONFIG_POSIX_TIMERS=y
 CONFIG_TTY=y
 CONFIG_UNIX98_PTYS=y
-CONFIG_LEGACY_PTYS=n
+# CONFIG_LEGACY_PTYS is not set
+# CONFIG_USELIB is not set
 
-# ===== EXPLICITLY DISABLED (bloat reduction) =====
+# ===== PRINTK =====
+CONFIG_PRINTK=y
+CONFIG_LOG_BUF_SHIFT=12
+# CONFIG_PRINTK_TIME is not set
+
+# ===== SECURITY - stripped =====
+# CONFIG_SECCOMP is not set
+# CONFIG_AUDIT is not set
+# CONFIG_SECURITY is not set
+# CONFIG_KEYS is not set
+
+# ===== EVERYTHING ELSE - OFF =====
 # CONFIG_SOUND is not set
 # CONFIG_NET is not set
 # CONFIG_WIRELESS is not set
 # CONFIG_BLUETOOTH is not set
-# CONFIG_WLAN is not set
-# CONFIG_ETHERNET is not set
-# CONFIG_MODULES is not set
-# CONFIG_SWAP is not set
 # CONFIG_HIBERNATION is not set
 # CONFIG_KEXEC is not set
-# CONFIG_FTRACE is not set
-# CONFIG_PERF_EVENTS is not set
-# CONFIG_PROFILING is not set
-# CONFIG_KPROBES is not set
-# CONFIG_SECCOMP is not set
-# CONFIG_AUDIT is not set
-# CONFIG_INOTIFY_USER is not set
-# CONFIG_FANOTIFY is not set
-# CONFIG_QUOTA is not set
-# CONFIG_AUTOFS_FS is not set
-# CONFIG_FUSE_FS is not set
 # CONFIG_CGROUPS is not set
 # CONFIG_NAMESPACES is not set
 # CONFIG_CRYPTO is not set
 # CONFIG_VIRTUALIZATION is not set
 # CONFIG_HYPERVISOR_GUEST is not set
+# CONFIG_ATA is not set
+# CONFIG_SCSI is not set
+# CONFIG_MD is not set
+# CONFIG_DM is not set
+# CONFIG_WATCHDOG is not set
+# CONFIG_THERMAL is not set
+# CONFIG_HWMON is not set
+# CONFIG_MEDIA_SUPPORT is not set
+# CONFIG_BACKLIGHT_CLASS_DEVICE is not set
+# CONFIG_MMC is not set
+# CONFIG_NFC is not set
+# CONFIG_RFKILL is not set
+# CONFIG_I2C is not set
+# CONFIG_SPI is not set
+# CONFIG_POWER_SUPPLY is not set
+# CONFIG_PSTORE is not set
+# CONFIG_RAS is not set
+# CONFIG_LEDS_CLASS is not set
