--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -37,8 +37,6 @@ jobs:
       - name: Force-remove unwanted options with sed
         run: |
           cd linux-6.6
-          # This runs AFTER olddefconfig so these are truly removed
-          # Pattern: change CONFIG_X=y to # CONFIG_X is not set
           force_off() {
             local opt=$1
             sed -i "s/^CONFIG_${opt}=.*$/# CONFIG_${opt} is not set/" .config
@@ -105,7 +103,7 @@ jobs:
           force_off MAILBOX
           force_off PCC
 
-          # PS/2 keyboard stack (HID covers everything)
+          # PS/2 keyboard stack
           force_off SERIO
           force_off SERIO_I8042
           force_off SERIO_LIBPS2
@@ -113,7 +111,7 @@ jobs:
           force_off KEYBOARD_ATKBD
           force_off INPUT_VIVALDIFMAP
 
-          # SCSI (no SCSI devices)
+          # SCSI
           force_off SCSI
           force_off SCSI_MOD
 
@@ -122,7 +120,7 @@ jobs:
           force_off PNPACPI
           force_off PNP_DEBUG_MESSAGES
 
-          # Thermal framework (ACPI_THERMAL handles AMD directly)
+          # Thermal framework
           force_off THERMAL
           force_off THERMAL_GOV_STEP_WISE
           force_off THERMAL_GOV_USER_SPACE
@@ -136,6 +134,10 @@ jobs:
           force_off FW_LOADER
           force_off VM_EVENT_COUNTERS
           force_off HOTPLUG_CPU
+          force_off HOTPLUG_SMT
+          force_off HOTPLUG_CORE_SYNC
+          force_off HOTPLUG_SPLIT_STARTUP
+          force_off HOTPLUG_PARALLEL
           force_off EFI_ESRT
           force_off EDAC_SUPPORT
           force_off CPU_ISOLATION
@@ -144,35 +146,9 @@ jobs:
           force_off X86_16BIT
           force_off X86_VSYSCALL_EMULATION
           force_off LEGACY_VSYSCALL_XONLY
-
-          # Wrong-arch XZ decoders (we only need X86)
-          force_off XZ_DEC_POWERPC
-          force_off XZ_DEC_IA64
-          force_off XZ_DEC_ARM
-          force_off XZ_DEC_ARMTHUMB
-          force_off XZ_DEC_SPARC
-
-          # Crypto pulled in unnecessarily
-          force_off CRYPTO_LIB_BLAKE2S_GENERIC
-          force_off CRYPTO_LIB_POLY1305_RSIZE
-
-          # Memory/sched features not needed for shell
-          force_off SHMEM
-          force_off VM_EVENT_COUNTERS
-          force_off CPU_ISOLATION
-          force_off HOTPLUG_CPU
-          force_off HOTPLUG_SMT
-          force_off HOTPLUG_CORE_SYNC
-          force_off HOTPLUG_SPLIT_STARTUP
-          force_off HOTPLUG_PARALLEL
           force_off X86_5LEVEL
-          force_off CONTEXT_TRACKING
-          force_off CONTEXT_TRACKING_IDLE
-          force_off LOG_CPU_MAX_BUF_SHIFT
           force_off SCHED_MC_PRIO
           force_off RANDOMIZE_KSTACK_OFFSET
-
-          # Misc
           force_off CLOCKSOURCE_WATCHDOG
           force_off RTC_LIB
           force_off RTC_MC146818_LIB
@@ -182,12 +158,18 @@ jobs:
           force_off PCI_LABEL
           force_off PCI_LOCKLESS_CONFIG
           force_off PCI_QUIRKS
-          force_off ARCH_SUPPORTS_KEXEC
-          force_off HAVE_LIVEPATCH
           force_off X86_ESPFIX64
           force_off PCSPKR_PLATFORM
           force_off ISA_DMA_API
           force_off GENERIC_ISA_DMA
+          force_off XZ_DEC_POWERPC
+          force_off XZ_DEC_IA64
+          force_off XZ_DEC_ARM
+          force_off XZ_DEC_ARMTHUMB
+          force_off XZ_DEC_SPARC
+          force_off CRYPTO_LIB_BLAKE2S_GENERIC
+          force_off SHMEM
+          force_off LOG_CPU_MAX_BUF_SHIFT
 
           echo "=== Force-off complete ==="
 
@@ -196,13 +178,19 @@ jobs:
           cd linux-6.6
           echo "=== Total options enabled ==="
           grep "^CONFIG_" .config | wc -l
-          echo "=== Full enabled config ==="
-          grep "^CONFIG_" .config
 
       - name: Build kernel
         run: |
           cd linux-6.6
           make -j$(nproc) bzImage 2>&1 | tail -30
+
+      - name: Bloat report
+        run: |
+          cd linux-6.6
+          echo "=== Top 60 largest symbols ==="
+          nm --size-sort -r vmlinux | awk '{print $1, $3}' | head -60
+          echo "=== Section sizes ==="
+          size vmlinux
 
       - name: Report size
         run: |
@@ -214,8 +202,4 @@ jobs:
         with:
           name: vmlinuz
           path: linux-6.6/arch/x86/boot/bzImage
-
-- name: Show biggest compiled symbols
-        run: |
-          cd linux-6.6
-          nm --size-sort -r vmlinux | head -60
+          retention-days: 30
